# FORGE

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: acceptance-and-invalidation.md  adapters.md  agent-context.md  artifacts-and-evidence.md  closure-and-archives.md  constitution.md  continuity.md  contracts.md  dependencies.md  git-policy.md  glossary.md  handoffs-and-imports.md  idempotency.md  migrations.md  persistence.md  recovery.md  successors.md  validators.md  workflows.md
docs/adr/: ADR-0001-project-direction.md  ADR-0002-embedded-project-repositories.md  ADR-0003-active-and-archived-initiatives.md  ADR-0004-source-of-truth-hierarchy.md  ADR-0010-threat-model.md  (+32 more)
tests/: test_abandonment_and_archives.py  test_acceptance_and_invalidation.py  test_agent_adapters.py  test_agent_context.py  test_agent_runs.py  test_artifacts_and_evidence.py  test_claude_adapter.py  test_cli.py  test_closure_and_archives.py  test_codex_adapter.py  test_command_recovery.py  test_continuity.py  test_contracts.py  test_foundation.py  test_git_policy.py  test_handoffs_and_imports.py  test_idempotency.py  test_journal_and_state.py  test_lock_remediation.py  test_locking.py  test_m1_acceptance.py  test_m3_acceptance.py  test_migrations.py  test_pack_trust.py  test_packs.py  test_paths.py  test_recovery.py  test_repository_initialization.py  test_scope_amendments.py  test_successor_initiatives.py  test_validator_capabilities.py  test_vendor_context.py  test_workflow_lifecycle.py
(+122 files in other folders)
